--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup .NET
+    - name: Setup .NET 9 Preview
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+         dotnet-version: 9.0.100-preview.1
+         include-prerelease: true
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
