--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
          dotnet-version: 9.0.100-preview.1
+         include-prerelease: true
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
