--- a/src/Services/NotificationService/Infrastructure/NotificationService.Infrastructure.csproj
+++ b/src/Services/NotificationService/Infrastructure/NotificationService.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../../ApprovalService/Domain/ApprovalService.Domain.csproj" />
+    <ProjectReference Include="../Domain/NotificationService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
